--- a/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
@@ -73,6 +73,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Integer and float conversions\n",
+    "When you divide an integer by another integer, the result is always an integer (rounded down, if needed).\n",
+    "When you divide a float by an integer, the result is always a float.\n",
+    "To divide two integers and end up with a float, you must first use float() to convert one of the integers to a float."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
