--- a/Python/UDEMY_CODEACDMY/notebooks/03-DS_Lists_Slicing.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/03-DS_Lists_Slicing.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "### Data structures - LISTS\n",
     "A data structure in Python. List is like the vector data strucure in R, except that in can store multiple data types\n",
-    " A list can be defined as ordered set of elements, where elements could be integers,floats,strings, logical or event lists\n",
-    " Indexing in Python starts from 0, unlike in R where it starts from1\n",
-    " One method of creating list is using [] brackets\n"
+    " A list can be defined as ordered set of elements, where elements could be integers,floats,strings, logical or event lists.  \n",
+    "Indexing in Python starts from 0, unlike in R where it starts from1\n",
+    "One method of creating list is using [] brackets\n"
    ]
   },
   {
@@ -52,8 +52,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initializing a list, appending and indexing\n",
+    "A list of a specific size can be defined by filling it with None – which is a special character in Python like \n",
+    "NULL in R"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,14 +71,13 @@
        "9"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Initializing a list\n",
-    "#A list of a specific size can be defined by filling it with None – which is a special character in Python like NULL in R\n",
+    "\n",
     "a=[None]*6\n",
     "\n",
     "#You can append to a list by using append() function\n",
@@ -78,8 +86,69 @@
     "# Indexing and accessing elements of a list\n",
     "y[len(y)-1] \n",
     "\n",
-    "# Negative indexing , Python has a negative indexing context, the last element is indexed -1 and index increases towards the left\n",
+    "# Negative indexing , Python has a negative indexing context, the last element is indexed -1 and index \n",
+    "# increases towards the left\n",
     "y[-1] \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inserting to a list, searching, sorting a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[1, 2, 3, 2.5, 4, 5, 6, 7, 8, 9]\n",
+      "[1, 2, 2.5, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can search and retrieve index with a search \n",
+    "print (y.index(6))\n",
+    "\n",
+    "# Can also insert an element in a list and the elements slide to the right, inserting is different from replacement\n",
+    "y.insert(3,2.5)\n",
+    "print(y)\n",
+    "\n",
+    "# sort method modifies the list, does not return a new list\n",
+    "y.sort()\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing an item from the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y.remove(2.5)\n",
+    "print(y)"
    ]
   },
   {
@@ -149,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
