--- a/Python/UDEMY_CODEACDMY/notebooks/14-Control_Conditonal_Statements.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/14-Control_Conditonal_Statements.ipynb
@@ -92,13 +92,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Looping techniques\n",
-    "1.\tUse of ‘in’ keywors. In and not in are keywords to check memberships, in loops they help   \n",
-    "a variable take on values from a sequence (lists, tuples) and dictionaries   \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "#### Looping techniques  \n",
+    "##### Loops can be used with lists and dictionaries\n",
+    "1.\tUse of ‘in’ keyword. In and not in are keywords to check memberships, in loops they help   \n",
+    "a variable take on values from a sequence (lists, tuples) and dictionaries   \n"
    ]
   },
   {
@@ -130,7 +127,7 @@
     }
    ],
    "source": [
-    "#2.\tWhen looping over a sequence both index and values can be accessed using enumerate function\n",
+    "#2.\tWhen looping over a sequence like list both index and values can be accessed using enumerate function\n",
     "ip=[12, 15, 18, 20, 21, 24]\n",
     "for i,j in enumerate(ip):\n",
     "    print (i,j)\n",
@@ -158,7 +155,7 @@
     }
    ],
    "source": [
-    "# 3.\tTo loop over two sequences at a time, the sequences can be paired using zip() function\n",
+    "# 3.\tTo loop over two sequences/lists at a time, the sequences can be paired using zip() function\n",
     "a=[\"a\",\"b\",\"c\",\"d\"]\n",
     "b=[1,2,3,4]\n",
     "for i,j in zip(a,b):\n",
@@ -167,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +186,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name\n",
+      "Car\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. To access value of keys, use the name of the dictionary\n",
+    "for k in dic:\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -204,7 +221,8 @@
    ],
    "source": [
     "#Lists: Lists are a data structure in Python, an example of for loop with a list is below. \n",
-    "#Notice that since list is of integers, we did not have to specify the length of list for iterations in for loop, it goes over the list of elements of the list and executes if element is not zero.\n",
+    "#Notice that since list is of integers, we did not have to specify the length of list for iterations in \n",
+    "# for loop, it goes over the list of elements of the list and executes if element is not zero.\n",
     "a=[10,20,30]\n",
     "for j in a:\n",
     "    print (j)"
@@ -264,6 +282,58 @@
     "    print (\"Positive\")\n",
     "else:\n",
     "    print(\"zero\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example of creating total of items purchased\n",
+    "### keeping a dictionary of stocks, prices and \n",
+    "### Updating stock as it goes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "shopping_list = [\"banana\", \"orange\", \"apple\"]\n",
+    "\n",
+    "stock = {\n",
+    "  \"banana\": 6,\n",
+    "  \"apple\": 0,\n",
+    "  \"orange\": 32,\n",
+    "  \"pear\": 15\n",
+    "}\n",
+    "    \n",
+    "prices = {\n",
+    "  \"banana\": 4,\n",
+    "  \"apple\": 2,\n",
+    "  \"orange\": 1.5,\n",
+    "  \"pear\": 3\n",
+    "}\n",
+    "\n",
+    "# Write your code below!\n",
+    "def compute_bill(food):\n",
+    "  total = 0\n",
+    "  for item in food:\n",
+    "    if stock[item] > 0:\n",
+    "      total += prices[item]\n",
+    "      stock[item] -= 1\n",
+    "    \n",
+    "  return(total)  \n",
+    "\n",
+    "print(compute_bill(shopping_list))"
    ]
   }
  ],
