--- a/Python/UDEMY_CODEACDMY/notebooks/07-DS_Dictionaries.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/07-DS_Dictionaries.ipynb
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Salary[Pdict['JoeJohnson'],Sdict['2011']]\n",
@@ -73,6 +75,162 @@
     "\n",
     "#Points[Pdict['JoeJohnson']]\n",
     "#array([1653, 1426, 1779, 1688, 1619, 1312, 1129, 1170, 1245, 1154])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A dictionary can be initialized as empty , like a list. And is also mutable, appendable.\n",
+    "length of the dictionary is the number of key value pairs in it. \n",
+    "The values in a dictionaty, could also be lists\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'colas': 12.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {}\n",
+    "d[\"colas\"] = 12.5\n",
+    "print (d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'colas': 12.5, 'fizz_drinks': [11, 12.5]}\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "d[\"fizz_drinks\"] = [11,12.5]\n",
+    "print(d)\n",
+    "print (len(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 12.5]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[\"fizz_drinks\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since dictionary is mutable, the items can be deleted also"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fizz_drinks': [11, 12.5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "del d[\"colas\"]\n",
+    "print (d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise \n",
+    "### Deleting items from a dictionary, adding items to a dictionary, \n",
+    "### modifying values in a dictionary that are lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inventory = {\n",
+    "  'gold' : 500,\n",
+    "  'pouch' : ['flint', 'twine', 'gemstone'], # Assigned a new list to 'pouch' key\n",
+    "  'backpack' : ['xylophone','dagger', 'bedroll','bread loaf']\n",
+    "}\n",
+    "\n",
+    "# Adding a key 'burlap bag' and assigning a list to it\n",
+    "inventory['burlap bag'] = ['apple', 'small ruby', 'three-toed sloth']\n",
+    "\n",
+    "# Sorting the list found under the key 'pouch'\n",
+    "inventory['pouch'].sort() \n",
+    "\n",
+    "# Adding a list \"pocket\" to the dictionary\n",
+    "inventory['pocket'] = ['seashell', 'strange berry','lint']\n",
+    "\n",
+    "# Sorting a list in the dictionary\n",
+    "inventory['backpack'].sort()\n",
+    "\n",
+    "# Removing an item from a list in the dictionary\n",
+    "inventory['backpack'].remove('dagger')\n",
+    "\n",
+    "# Modifying a value in the dictionary\n",
+    "inventory['gold'] += 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
+    "\n",
+    "lt = [n for n in a if n % 2 ==0]\n",
+    "print(lt)"
    ]
   }
  ],
@@ -92,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
