--- a/Python/UDEMY_CODEACDMY/notebooks/03-DS_Lists_Slicing.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/03-DS_Lists_Slicing.ipynb
@@ -130,7 +130,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Removing an item from the list"
+    "### Removing an item from the list\n",
+    "Can use list.pop(index) or list.remove(item) or del (list[index]). All methods modify yhe original list."
    ]
   },
   {
