--- a/Python/UDEMY_CODEACDMY/notebooks/14-Control_Conditonal_Statements.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/14-Control_Conditonal_Statements.ipynb
@@ -7,12 +7,12 @@
     "#### Loops and IF Statements\n",
     "\n",
     "##### While Loop:\n",
-    "While loop syntax in Python  \n",
+    "While loop syntax in Python   \n",
     "\n",
-    "While condition:\n",
-    " execute code1\n",
-    " execute code2\n",
-    " execute code 3\n",
+    "While condition:  \n",
+    " execute code1  \n",
+    " execute code2  \n",
+    " execute code 3  \n",
     "\n",
     "##### Difference from R\n",
     "\n",
@@ -25,7 +25,7 @@
     "Difference:\n",
     "1. Python does not have braces, the condition to be checked first is determined by anything before colon  \n",
     "2. The executable code is separated from code that follows loop by indentation  \n",
-    "3. Indentation is part of the syntax structure in Python!  "
+    "3. Indentation is part of the syntax structure in Python!    "
    ]
   },
   {
@@ -59,7 +59,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For Loop\n",
+    "### Typical application of while loop is to check for a simple error condition until\n",
+    "### it is rectified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enjoying the course? (y/n)y\n"
+     ]
+    }
+   ],
+   "source": [
+    "choice = input('Enjoying the course? (y/n)')\n",
+    "\n",
+    "while choice != 'y' and choice != 'n':  # Fill in the condition (before the colon)\n",
+    "  choice = input(\"Sorry, I didn't catch that. Enter again: \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Break\n",
+    "An example is to use with while to make it run atleast once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "while True:\n",
+    "  print (count)\n",
+    "  count += 1\n",
+    "  if count >= 3:\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For Loop\n",
     "It has similar structure as of While loop\n"
    ]
   },
