--- a/NLP/Applied_Text_Mining_Coursera/Week1/01-Importance_basic_preprocessing.ipynb
+++ b/NLP/Applied_Text_Mining_Coursera/Week1/01-Importance_basic_preprocessing.ipynb
@@ -258,34 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['I',\n",
-       " ' ',\n",
-       " 'a',\n",
-       " 'm',\n",
-       " ' ',\n",
-       " 'l',\n",
-       " 'e',\n",
-       " 'a',\n",
-       " 'r',\n",
-       " 'n',\n",
-       " 'i',\n",
-       " 'n',\n",
-       " 'g',\n",
-       " ' ',\n",
-       " 'N',\n",
-       " 'L',\n",
-       " 'P']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', ' ', 'a', 'm', ' ', 'l', 'e', 'a', 'r', 'n', 'i', 'n', 'g', ' ', 'N', 'L', 'P']\n"
+     ]
     }
    ],
    "source": [
@@ -296,10 +277,10 @@
     "chrs\n",
     "\n",
     "# Method 2 : coercion to a list\n",
-    "list(text4)\n",
+    "print(list(text4))\n",
     "\n",
     "# What will not work\n",
-    "text4.split(\"\") # split needs a charcter to split on, arleast a whitespace \" \""
+    "#text4.split(\"\") # split needs a charcter to split on, arleast a whitespace \" \""
    ]
   },
   {
@@ -386,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
