--- a/Python/UDEMY_CODEACDMY/notebooks/14-Control_Conditonal_Statements.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/14-Control_Conditonal_Statements.ipynb
@@ -120,6 +120,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### While/Else construct in python\n",
+    "This is a unique construct to python. While loop is executed until the while conditions is true, else is executed \n",
+    "when the condition becomes false.\n",
+    "Use with 'break' makes it special, when the while loop is exited with break, else is not executed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an integer between 1 to 107\n",
+      "You WON\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# Give three guesses to user to guess an integer b/w 1 to 10 inclusive\n",
+    "guess = random.randint(1,10)\n",
+    "count = 1\n",
+    "while count <= 3:\n",
+    "    number = int(input (\"Enter an integer between 1 to 10\"))\n",
+    "    if number == guess:\n",
+    "        print (\"You WON\")\n",
+    "        break      \n",
+    "    count += 1\n",
+    "else:\n",
+    "    print (\"You Lose, the number was %i\" %(guess))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### For Loop\n",
     "It has similar structure as of While loop\n"
    ]
@@ -287,6 +326,41 @@
     "a=[10,20,30]\n",
     "for j in a:\n",
     "    print (j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For/Else construct in python\n",
+    "This is a unique construct to python like while/else. For loop is executed until the conditions is true, else is executed when the condition becomes false. Use with 'break' makes it special, when the  loop is exited with break, else is not executed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a Word \n",
+      "natitan\n",
+      "palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FInd if  word is palindrome\n",
+    "word = str(input(\"Enter a Word \\n\"))\n",
+    "length = len(word)\n",
+    "for i in range(int(length/2)):\n",
+    "  if word[i] != word [length - i -1]:\n",
+    "    print (\"Not a palindrome \")\n",
+    "    break\n",
+    "else: \n",
+    "  print (\"palindrome\")"
    ]
   },
   {
