--- a/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
@@ -240,6 +240,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Count sum of digits of a whole number "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def digit_sum(x):\n",
+    "  num = x\n",
+    "  sum = 0\n",
+    "  while(int(num / 10) != 0):\n",
+    "    sum = sum + num % 10\n",
+    "    num = int(num / 10)  \n",
+    "    '''int performs the task of flooring a floot, whereas round performs task of taking to ceiling'''\n",
+    "  return (sum + num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digit_sum(105)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(x):\n",
+    "  if (x==0):\n",
+    "    return 1\n",
+    "  result = 1\n",
+    "  for i in range(x):\n",
+    "    result = result * x\n",
+    "    x = x - 1\n",
+    "  return (result) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial (0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Function to detect a prime number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_prime(x):\n",
+    "    if (x<=1):\n",
+    "        return(False)\n",
+    "    elif (x ==2):\n",
+    "        return (True)\n",
+    "    else:\n",
+    "        for num in range(2,x):\n",
+    "          if (x%num ==0):\n",
+    "            return (False)\n",
+    "    return(True)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_prime(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Function to reverse a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''Append method is available only in lists'''\n",
+    "def reverse (x):\n",
+    "    x_list = list(x)\n",
+    "    rev = []\n",
+    "    l = len(x_list)\n",
+    "    while (l>0):\n",
+    "        rev.append(x[l-1])\n",
+    "        l = l-1\n",
+    "    return (\"\".join(rev))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'?!c#ba\""
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverse (\"ab#c!?'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Vowel Removal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
