--- a/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
@@ -284,9 +284,18 @@
    },
    "source": [
     "## Boolean Operators \n",
-    "and, or, not \n",
+    "and, or, not   \n",
     "not, and, or are evaluated in this order, units in parentheses are solved first"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
