--- a/Python/UDEMY_CODEACDMY/notebooks/03-DS_Lists_Slicing.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/03-DS_Lists_Slicing.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "source": [
     "### Slicing (with lists)\n",
-    "Slicing is same as subsetting in R\n",
+    "Slicing is same as subsetting in R. But, slicing can also be used to generate sequences.  \n",
     "Let us look at subsetting lists , we use [] and : to create subsets\n",
     "#### Three components that could be specified – \n",
     "1. Starting index, this could use positive indexing/negative indexing \n",
