--- a/Python/UDEMY_CODEACDMY/notebooks/07-DS_Dictionaries.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/07-DS_Dictionaries.ipynb
@@ -37,8 +37,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionary does not have the elements ordered, to access a value from a list, one needs to use the key.   \n",
-    "When you print a list, the order of print reflects how key:value pairs are stored internally which is based  \n",
+    "Dictionary does not have the elements ordered, to access a value from a dictionary, one needs to use the key.   \n",
+    "When you print a dictionary, the order of print reflects how key:value pairs are stored internally which is based \n",
     "on storage efficiency.Dictionary is still access by [] brackets and passing the key\n"
    ]
   },
@@ -175,10 +175,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Accessing keys and values from dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('name', 'sumad'), ('age', 32), ('siblings', 1)])\n",
+      "dict_keys(['name', 'age', 'siblings'])\n",
+      "dict_values(['sumad', 32, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {\n",
+    "  \"name\" : \"sumad\",\n",
+    "  \"age\" : 32,\n",
+    "  \"siblings\" : 1\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('name', 'sumad'), ('age', 32), ('siblings', 1)])\n",
+      "<class 'dict_items'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# items keyword, returns tuples of key,value pairs\n",
+    "print(my_dict.items())\n",
+    "print (type(my_dict.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name', 'age', 'siblings'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# keys keyword returns a list of keys\n",
+    "my_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['sumad', 32, 1])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict.values() # returns a list of values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise \n",
     "### Deleting items from a dictionary, adding items to a dictionary, \n",
     "### modifying values in a dictionary that are lists"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
