--- a/Python/UDEMY_CODEACDMY/notebooks/11-Functional_programming.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/11-Functional_programming.ipynb
@@ -8,8 +8,7 @@
     "There are three functions filter(), map() and reduce() in python that are useful when used with lists.  \n",
     "Recall, that performing operations on lists like squaring each element or dividing each element of a  \n",
     "list with that of another is not possible.  \n",
-    "The above functions, give ability like apply family of functions in R. These require defining    \n",
-    "a function as first argument and a list or a sequence as the second argument.  \n"
+    "The above functions, give ability like apply family of functions in R or the ability to vectorize functions.   These require defining a function as first argument and a list or a sequence as the second argument.  \n"
    ]
   },
   {
@@ -225,6 +224,35 @@
     "ip=[12, 15, 18, 20, 21, 24]\n",
     "functools.reduce(lambda x, y: x+y, ip)    \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example of using filter on a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I am another secret message!'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "garbled = \"IXXX aXXmX aXXXnXoXXXXXtXhXeXXXXrX sXXXXeXcXXXrXeXt mXXeXsXXXsXaXXXXXXgXeX!XX\"\n",
+    "message = filter(lambda x: x!=\"X\",garbled)\n",
+    "\"\".join(list(message))\n"
+   ]
   }
  ],
  "metadata": {
@@ -243,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
