--- a/Python/UDEMY_CODEACDMY/notebooks/04-DS_tuples_listcomprehension.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/04-DS_tuples_listcomprehension.ipynb
@@ -40,8 +40,9 @@
    "source": [
     "### Lists Comprehensions\n",
     "Lists comprehensions provides a concise way of  \n",
-    "a.\tCreating lists on top of another sequence/s or list/s by applying an operation on them\n",
+    "a.\tCreating lists on top of another sequence/s or list/s by applying an operation on them  \n",
     "b.\tApplying a function on each element of a list/s  \n",
+    "c.  provide an easy \n",
     "\n",
     "Syntax:  \n",
     "•\tSquare bracket \n",
@@ -200,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
