--- a/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
@@ -294,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def factorial(x):\n",
@@ -337,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def is_prime(x):\n",
@@ -427,12 +431,333 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def anti_vowel(text):\n",
+    "    vowels = \"aeiou\"\n",
+    "    vowels = vowels + vowels.upper()\n",
+    "    temp = list(text)\n",
+    "    text_lt = [chr for chr in temp if chr not in vowels]\n",
+    "    return(\"\".join(text_lt))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hll thr!'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anti_vowel(\"Hello there!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Scrabble score counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = {\"a\": 1, \"c\": 3, \"b\": 3, \"e\": 1, \"d\": 2, \"g\": 2, \n",
+    "         \"f\": 4, \"i\": 1, \"h\": 4, \"k\": 5, \"j\": 8, \"m\": 3, \n",
+    "         \"l\": 1, \"o\": 1, \"n\": 1, \"q\": 10, \"p\": 3, \"s\": 1, \n",
+    "         \"r\": 1, \"u\": 1, \"t\": 1, \"w\": 4, \"v\": 4, \"y\": 4, \n",
+    "         \"x\": 8, \"z\": 10}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def scrabble_score(word):\n",
+    "    sum = 0\n",
+    "    for chr in word:\n",
+    "        value = score[chr.lower()]\n",
+    "        sum = sum + value\n",
+    "    return(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrabble_score(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Censor a word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def censor(text, word):\n",
+    "    ast_len = len(word)\n",
+    "    rep = \"\"\n",
+    "    for i in range(ast_len):\n",
+    "        rep += \"*\"\n",
+    "    text_new = text.replace(word, rep)\n",
+    "    return(text_new)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'*** is ***'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "censor(\"how is how\", \"how\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Counting words/lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count(sequence,item):\n",
+    "  seq_list = list(sequence)\n",
+    "  count = 0\n",
+    "  for i in range(len(seq_list)):\n",
+    "    if (seq_list[i] == item):\n",
+    "      count += 1\n",
+    "  return(count)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count(\"I am I and I can go\", \"I\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count([1.1,2,3.1,4,3.1],3.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count([[1,2],[2,1],[1,2],[2,1]],[2,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Remove duplicates from a list of numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_duplicates(x):\n",
+    "  '''list to return'''\n",
+    "  temp = []\n",
+    "  '''list ot keep a track of indices where duplicates exist'''\n",
+    "  lt = []\n",
+    "  for i in range(len(x)):\n",
+    "    for j in range(i+1,len(x)):\n",
+    "      if (x[i] == x[j]):\n",
+    "        lt.append(j)\n",
+    "  for k in range(len(x)):\n",
+    "    if(k not in lt):\n",
+    "      temp.append(x[k])\n",
+    "  return(temp)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_duplicates([1,2,3,1,1,4,1,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Find median in a list of numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def median(x):\n",
+    "    x.sort()\n",
+    "    l = len(x)\n",
+    "    l_even = (int(l%2) == 0)\n",
+    "    if (not l_even):\n",
+    "        return(x[round(l/2)-1])\n",
+    "    else:\n",
+    "        avg = (x[int(l/2)] + x[int(l/2)-1])/2\n",
+    "        return(avg)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median([3,2,2,5,4,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median([4,5,5,4])"
+   ]
   }
  ],
  "metadata": {
