--- a/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
@@ -289,6 +289,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Bitwise Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binary representation : Binary representation is done be prefixing binary numbers with '0b'.   \n",
+    "Example : 0b100 is representation for decimal 4.   \n",
+    "bin() function converts a decimal to binary   \n",
+    "in(\"string\", <base>) converts a numbers expressed as string in a 'base' representation to decimal integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"10\",2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operations  \n",
+    "'>> -  Right shift  \n",
+    "<< -  Left Shift  \n",
+    "& -  and  \n",
+    "| - or   \n",
+    "^ - xor, returns 1 if operands are opposite i.e 0 and 1 or 1 and 0, else returns 0  \n",
+    "~ - binary complement  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
