--- a/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
@@ -39,6 +39,7 @@
       "Bhanu\n",
       "How are you there\n",
       "I am fine\n",
+      "Where are you\n",
       "Age : 32\n",
       "Name : Sumad\n"
      ]
@@ -54,7 +55,7 @@
     "    keys=dic.keys()\n",
     "    for j in sorted(keys):\n",
     "        print (j,\":\",dic[j])\n",
-    "arb (23,\"Bhanu\", \"How are you there\", \"I am fine\",\n",
+    "arb (23,\"Bhanu\", \"How are you there\", \"I am fine\",\"Where are you\",\n",
     "Name=\"Sumad\",Age = 32)"
    ]
   },
@@ -432,7 +433,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def anti_vowel(text):\n",
@@ -473,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "score = {\"a\": 1, \"c\": 3, \"b\": 3, \"e\": 1, \"d\": 2, \"g\": 2, \n",
@@ -574,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def count(sequence,item):\n",
@@ -656,7 +663,9 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_duplicates(x):\n",
@@ -704,7 +713,9 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def median(x):\n",
