--- a/Python/UDEMY_CODEACDMY/notebooks/12-Classes_Modules_Inheritance.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/12-Classes_Modules_Inheritance.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
     "        except ZeroDivisionError:\n",
     "            return(\"Warning - length is 0\")    \n",
     "        \n",
-    "    def __str___(self):\n",
+    "    def __str__(self):\n",
     "        '''Override method when print is called on object of the class'''\n",
     "        return(\"Make %s, Model %s, year %s, Doors %s, Vin %s, Length %s, Liters %s\" %(self.make,\n",
     "        self.model, self.year, self.doors, self.vin, self.length, self.liters))"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "__main__.vehicle"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,12 +123,12 @@
     "    \"length\" : 195,\n",
     "    \"liters\" : 2.2}\n",
     "nissanrogue1 = vehicle(**dic)\n",
-    "type(nissanrogue)"
+    "type(nissanrogue1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -148,15 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning - length is 0\n",
-      "None\n"
+      "Warning - length is 0\n"
      ]
     }
    ],
@@ -171,19 +170,19 @@
     "     \"length\" : 0,    \n",
     "    \"liters\" : 2.2}\n",
     "nissanrogue2 = vehicle(**dic2)\n",
-    "print(nissanrogue.litbylen())"
+    "print(nissanrogue2.litbylen())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.vehicle object at 0x000001CF01FCA518>\n"
+      "Make Nissan, Model Rogue, year 2015, Doors 4, Vin 2234567677766, Length 0, Liters 2.2\n"
      ]
     }
    ],
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -220,9 +219,10 @@
     "    drivetype = \"Unknown\"\n",
     "    \n",
     "    def __init__(self,make, model, year, vin, transmission, drivetype):\n",
-    "        '''calling the the parent init class method is neecessary to initialize\n",
+    "        '''calling the the parent init class method is necessary to initialize\n",
     "        variables -  length and liters, which will then allow\n",
-    "        usage of method litbylen. The method will still be accessible but will operate on default values of parent class'''\n",
+    "        usage of method litbylen. The method will still be accessible but will operate on default values of \n",
+    "        parent class'''\n",
     "        vehicle.__init__(self, make = make, model = model, year = year,\n",
     "                         vin = vin, doors = 4, length = 195, liters = 2.6)\n",
     "        self.transmission = transmission\n",
@@ -293,6 +293,215 @@
     "\n",
     "# Check if methods defined in subclass work\n",
     "veh_altima.check()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example of class to create shopping cart objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple added.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ShoppingCart(object):\n",
+    "  \"\"\"Creates shopping cart objects\n",
+    "  for users of our fine website.\"\"\"\n",
+    "  items_in_cart = {}\n",
+    "  def __init__(self, customer_name):\n",
+    "    self.customer_name = customer_name\n",
+    "\n",
+    "  def add_item(self, product, price):\n",
+    "    \"\"\"Add product to the cart.\"\"\"\n",
+    "    if not product in self.items_in_cart:\n",
+    "      self.items_in_cart[product] = price\n",
+    "      print (product + \" added.\")\n",
+    "    else:\n",
+    "      print (product + \" is already in the cart.\")\n",
+    "\n",
+    "  def remove_item(self, product):\n",
+    "    \"\"\"Remove product from the cart.\"\"\"\n",
+    "    if product in self.items_in_cart:\n",
+    "      del self.items_in_cart[product]\n",
+    "      print (product + \" removed.\")\n",
+    "    else:\n",
+    "      print (product + \" is not in the cart.\")\n",
+    "\n",
+    "my_cart = ShoppingCart(\"Sum\")\n",
+    "my_cart.add_item(\"Apple\", 3.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Class inheritance   \n",
+    "When inheriting from a class, one may need to override methods of the parent class, which can be done by  \n",
+    "redifining method in the inheriting class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Employee(object):\n",
+    "  \"\"\"Models real-life employees!\"\"\"\n",
+    "  def __init__(self, employee_name):\n",
+    "    self.employee_name = employee_name\n",
+    "\n",
+    "  def calculate_wage(self, hours):\n",
+    "    self.hours = hours\n",
+    "    return hours * 20.00\n",
+    "\n",
+    "# We redefine the method 'calculate_wage for part time employee class, which still  inherits the attribute\n",
+    "# employee_name\n",
+    "class PartTimeEmployee(Employee):\n",
+    "  def calculate_wage(self,hours):\n",
+    "    self.hours = hours\n",
+    "    return (self.hours * 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calling parent class' method having overwritten it in child class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee(object):\n",
+    "  \"\"\"Models real-life employees!\"\"\"\n",
+    "  def __init__(self, employee_name):\n",
+    "    self.employee_name = employee_name\n",
+    "\n",
+    "  def calculate_wage(self, hours):\n",
+    "    self.hours = hours\n",
+    "    return hours * 20.00\n",
+    "\n",
+    "'''calculate_wage is overwritten'''\n",
+    "class PartTimeEmployee(Employee):\n",
+    "  def calculate_wage(self,hours):\n",
+    "    self.hours = hours\n",
+    "    return (self.hours * 12)\n",
+    "\n",
+    "  '''another method is defined to access the method of parent class'''  \n",
+    "  def full_time_wage(self,hours):\n",
+    "    self.hours = hours\n",
+    "    '''We make use of super (<child class>,self).<method of parent>'''\n",
+    "    t= super(PartTimeEmployee,self).calculate_wage(self.hours)\n",
+    "    return (t)\n",
+    "\n",
+    "milton =  PartTimeEmployee(\"Milton\") \n",
+    "print(milton.full_time_wage(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example of class inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Triangle(object):\n",
+    "  number_of_sides = 3\n",
+    "  def __init__(self, angle1,angle2, angle3):\n",
+    "    self.angle1 = angle1\n",
+    "    self.angle2 = angle2\n",
+    "    self.angle3 = angle3\n",
+    "    \n",
+    "  def check_angles(self):\n",
+    "    if (self.angle1 + self.angle2 + self.angle3 == 180 ):\n",
+    "      return(True)\n",
+    "    else:\n",
+    "      return(False)\n",
+    "    \n",
+    "my_triangle = Triangle(90,30,60)\n",
+    "print(my_triangle.number_of_sides)\n",
+    "print(my_triangle.check_angles())\n",
+    "\n",
+    "class Equilateral(Triangle):\n",
+    "  angle = 60\n",
+    "  '''__init__ does not override the __init__ of base class, rather ensures the angles are assigned 60 \n",
+    "  with the creation of object'''\n",
+    "  def __init__(self):\n",
+    "    self.angle1 = self.angle\n",
+    "    self.angle2 = self.angle\n",
+    "    self.angle3 = self.angle\n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_eq = Equilateral() \n",
+    "print(my_eq.angle1)\n",
+    "my_eq.check_angles()"
    ]
   },
   {
