--- a/Python/UDEMY_CODEACDMY/notebooks/13-Errors_Exceptions_handling.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/13-Errors_Exceptions_handling.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "#### Handling Exceptions\n",
-    "Exceptions can be handled using try and except statements. Code after try is executed, if no exception/ error is found, the return statment is execured and all code after except is skipped. if an exception/error is found, the name is matched  \n",
+    "Exceptions can be handled using try and except statements. Code after try is executed, if no exception/ error is found, the return statment is executed and all code after except is skipped. if an exception/error is found, the name is matched  \n",
     "to what is defined in the section after except, and the corresponding action is taken\n"
    ]
   },
@@ -50,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
