--- a/Python/Python for DA/ch02 - Python Basic.ipynb
+++ b/Python/Python for DA/ch02 - Python Basic.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "## Python Basics\n",
+    "1. Interpreted Language, everything is an object (including functions)\n",
+    "2. Introspection using ? and ??\n",
+    "3.  magic commands - run, load, pwd, %debug, %matplotlib, %timeit , %time, %x del , %who, %who-ls \n",
+    "4. String formatting using {}  \n",
+    "5. Types (float, int, str, bool, date time) checking and conversion - isinstance, iter() ; type conversion using functions of same names  \n",
+    "6. Strong types ( no implicit conversion)\n",
+    "7. Control structures  \n",
+    "8. Operations - arithmetic, logical, string operations   \n",
+    "9. Variable to object binding; explicit copy required in pythonl passing arguments to a function DOES not create a copy as well"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
